# METEXON-BLE

./: README.md  pyproject.toml
examples/: client_no_disconnect.py  monitor_pressures.py  nvs_yaml_tool.py  read_pressure_once.py  stream_parameters.py  tune_blower_pid.py  zellenradschleuse_basic.ipynb  zellenradschleuse_basic.py
metexon/: __init__.py  base.py  client.py  constants.py  discovery.py  loop_thread.py  structures.py
metexon/zellenradschleuse/: __init__.py  client.py  constants.py  nvs_client.py  parameter_stream_client.py  sentinels.py  structures.py  update_helpers.py
tests/: test_structures.py  test_zellenradschleuse_structures.py
